# blueprint

./: .blueprint.yaml.example  .gitignore  END_TO_END_TEST_REPORT.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  alembic.ini  create_coherent_test_plan.py  create_test_plan.py  pyproject.toml
.clearance/: README.md  policy-snapshots.json
docs/: task_generation_complete.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
src/blueprint/: __init__.py  (+640 more)
tests/: __init__.py  conftest.py  test_acceptance_quality.py  test_acceptance_traceability.py  test_adr_candidates.py  test_adr_exporter.py  test_adr_markdown_importer.py  test_agent_handoff_checklist.py  test_agent_prompt_pack_exporter.py  test_anomaly_detection.py  test_api_bulk_operation_idempotency.py  test_api_bulk_operations.py  test_api_conditional_requests.py  test_api_cursor_pagination.py  test_api_error_taxonomy.py  test_api_field_projection.py  test_api_hypermedia.py  test_api_rate_limits.py  test_api_response_envelope.py  test_api_sort_parameters.py  test_archive_exporter.py  test_archive_manager.py  test_asana_csv_exporter.py  test_assumption_coverage.py  test_audit_trail.py  test_azure_devops_csv_exporter.py  test_azure_devops_importer.py  test_backup_system.py  test_benchmarking.py  test_blocked_impact.py  test_brief_ambiguity.py  test_brief_constraints.py  test_brief_decision_log.py  test_brief_dependency_map.py  test_brief_generator_validation.py  test_brief_glossary.py  test_brief_import.py  test_brief_non_goal_conflicts.py  test_brief_open_questions.py  test_brief_persona_coverage.py  (+826 more)
(+240 files in other folders)
